Converts Validation to a record
Fields required and nullable changed to boolean, which revealed some
weird null/Boolean.FALSE stuff.
With this change is trimming a weird doubling of information in the
validation/allof/openapi.yaml tests. Unclear if this is valid input.